<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toTopOf="@id/TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/solnishko"
        android:contentDescription="@string/todo"
        />
    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/title_name1"
        android:textColor="@color/neonOrange"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="200dp"
        android:layout_height="320dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/TextView">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/red_tree"
            android:hint="@string/field"
            android:inputType="text"
            android:autofillHints="text" />
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/activityButton"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/nextButton"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/backButton"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/logButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="logClick"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>