<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transport">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:text="@string/title_name1"
    android:textSize="45dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:background="@color/melon"
        android:hint="Поле для ввода текста"
        android:inputType="text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="18dp"
        android:text="@string/backButton"
        android:textSize="36dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/title_name2"
        android:textSize="45dp"
        android:textColor="@color/white"/>

</LinearLayout>